Use Guava immutable list since List.of is not available with JDK8